# AirClip

./: .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.pipe/: ci_pipeline.py
src/airclip/: __init__.py
tests/: test_basic.py
