[project]
name = "airclip"
version = "0.1.0"
description = "A secure, peer-to-peer Python utility that instantly synchronizes your clipboard across local devices."
authors = [
    {name = "Parneet Sidhu"},
    {name = "Harmanpreet Sidhu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "pygha>=0.2.1",
    "ruff>=0.14.0",
    "bandit[toml]>=1.9.0",
    "mypy>=1.18.0",
    "pre-commit",
]

[project.scripts]
air-clip = "airclip.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"

[tool.ruff]
# Target version for the linter
target-version = "py311"
line-length = 88
# Directories to exclude
exclude = [".git", ".venv", "build", "dist",'.pipe']

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), and Isort (I)
select = ["E", "F", "W", "I", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# As we discussed, allow 'assert' in the tests directory
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["airclip"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Requires functions to have types
check_untyped_defs = true
files = ["src"]               # Only check the source code by default
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false    # Don't require "-> None" for every test
disallow_incomplete_defs = false # Don't complain if a test isn't fully typed
check_untyped_defs = true        # STILL check the logic inside the test
